fix for clipped icon text (safari)

--- a/src/main/webapp/js/components/interface/query/query.less
+++ b/src/main/webapp/js/components/interface/query/query.less
@@ -27,7 +27,7 @@
 }
 
 #querybuilder .querybuilder-button {
-	height: 50px;
+	height: 82px;
 	width: 66px;
 	margin: 0px;
 	background: none !important;
